tests/snapshots/help/catalog__credential-schema.snap
---
source: tests/cli/snapshots.rs
---
Print the credential fields required to create an app of this type

Usage: vendo catalog credential-schema [OPTIONS] <appType>

Arguments:
  <appType>  

Options:
      --json  Output raw JSON
  -h, --help  Print help

Global options:
      --profile <name>  Use a specific account profile (or set VENDO_PROFILE)
      --debug           Enable verbose request diagnostics

Examples:
  $ vendo catalog credential-schema onesignal
  $ vendo catalog credential-schema bigquery --json
