tests/snapshots/help/catalog__get.snap
---
source: tests/cli/snapshots.rs
---
Get details for a specific platform

Usage: vendo catalog get [OPTIONS] <appType>

Arguments:
  <appType>  

Options:
      --json  Output raw JSON
  -h, --help  Print help

Global options:
      --profile <name>  Use a specific account profile (or set VENDO_PROFILE)
      --debug           Enable verbose request diagnostics

Examples:
  $ vendo catalog get shopify
  $ vendo catalog get bigquery --json
